collapse issue

--- a/src/smartbuy-styles.scss
+++ b/src/smartbuy-styles.scss
@@ -885,7 +885,7 @@ a {
     padding-bottom: 10px;
 }
 
-.contact-form .mat-form-field-wrapper, .destination_details_train .mat-form-field-wrapper, .traveler-details-info .mat-form-field-wrapper 
+.contact-form .mat-form-field-wrapper, .destination_details_train .mat-form-field-wrapper, .traveler-details-info .mat-form-field-wrapper ,
 .contact-form .mat-form-field-wrapper,
 .destination_details_train .mat-form-field-wrapper {
 
